--- a/package.json
+++ b/package.json
@@ -1,41 +1,55 @@
 {
-	"name": "helloworld-sample",
-	"displayName": "helloworld-sample",
-	"description": "HelloWorld example for VS Code",
-	"version": "0.0.1",
-	"publisher": "vscode-samples",
-	"repository": "https://github.com/Microsoft/vscode-extension-samples/helloworld-sample",
-	"engines": {
-		"vscode": "^1.25.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-		"onCommand:z-tf-checkout.checkout"
-	],
-	"main": "./out/extension.js",
-	"contributes": {
-		"commands": [
-			{
-				"command": "z-tf-checkout.checkout",
-				"title": "Checkout current file"
-			}
-		]
-	},
-	"scripts": {
-		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -p ./",
-		"watch": "tsc -watch -p ./",
-		"postinstall": "node ./node_modules/vscode/bin/install"
-	},
-	"devDependencies": {
-		"@types/node": "^8.10.25",
-		"tslint": "^5.11.0",
-		"typescript": "^2.6.1",
-		"vscode": "^1.1.22"
-	},
-	"dependencies": {
-		"package-lock.json": "^1.0.0"
-	}
+    "name": "z-tf-utils",
+    "displayName": "Z-TF Utils",
+    "description": "TF command utils for VS Code",
+    "version": "0.0.1",
+    "publisher": "ZoLToR",
+    "repository": "https://github.com/niberius/z-tf-utils",
+    "engines": {
+        "vscode": "^1.25.0"
+    },
+    "categories": [
+        "Other"
+    ],
+    "activationEvents": [
+        "onCommand:z-tf-util.checkout",
+        "onCommand:z-tf-util.undo",
+        "onCommand:z-tf-util.rollback",
+        "onCommand:z-tf-util.add"
+    ],
+    "main": "./out/extension.js",
+    "contributes": {
+        "commands": [{
+                "command": "z-tf-util.checkout",
+                "title": "Z-TF Util: Checkout current file"
+            },
+            {
+                "command": "z-tf-util.undo",
+                "title": "Z-TF Util: Undo changes for current file"
+            },
+            {
+                "command": "z-tf-util.rollback",
+                "title": "Z-TF Util: Rollback changes of current file"
+            },
+            {
+                "command": "z-tf-util.add",
+                "title": "Z-TF Util: Add current file to TFS"
+            }
+        ]
+    },
+    "scripts": {
+        "vscode:prepublish": "npm run compile",
+        "compile": "tsc -p ./",
+        "watch": "tsc -watch -p ./",
+        "postinstall": "node ./node_modules/vscode/bin/install"
+    },
+    "devDependencies": {
+        "@types/node": "^8.10.25",
+        "tslint": "^5.11.0",
+        "typescript": "^2.6.1",
+        "vscode": "^1.1.22"
+    },
+    "dependencies": {
+        "package-lock.json": "^1.0.0"
+    }
 }
