--- a/package.json
+++ b/package.json
@@ -1,55 +1,97 @@
 {
-    "name": "z-tf-utils",
-    "displayName": "Z-TF Utils",
+    "name": "auto-tfs",
+    "displayName": "Auto TFS",
     "description": "TF command utils for VS Code",
-    "version": "0.1.2",
-    "publisher": "zoltor",
-    "repository": "https://github.com/niberius/z-tf-utils",
-    "homepage": "https://github.com/niberius/z-tf-utils",
-    "bugs": {
-        "url": "https://github.com/niberius/z-tf-utils/issues"
+    "version": "0.1.0",
+    "publisher": "nik-base",
+    "author": {
+        "name": "Nikhil Patil",
+        "url": "https://github.com/nik-base"
     },
+    "repository": "https://github.com/nik-base/auto-tfs",
+    "homepage": "https://github.com/nik-base/auto-tfs#readme",
+    "bugs": {
+        "url": "https://github.com/nik-base/auto-tfs/issues"
+    },
+    "readmeFilename": "README.md",
     "engines": {
-        "vscode": "^1.25.0"
+        "vscode": "^1.58.2"
     },
     "categories": [
         "Other"
     ],
     "activationEvents": [
-        "onCommand:z-tf-util.checkout",
-        "onCommand:z-tf-util.undo",
-        "onCommand:z-tf-util.add",
-        "onCommand:z-tf-util.delete"
+        "onCommand:auto-tfs.checkout",
+        "onCommand:auto-tfs.undo",
+        "onCommand:auto-tfs.add",
+        "onCommand:auto-tfs.delete"
     ],
-    "keywords": ["tfs", "team", "foundation", "server"],
+    "keywords": [
+        "tfs",
+        "team",
+        "foundation",
+        "server",
+        "tf",
+        "tfvc",
+        "vsts",
+        "azure",
+        "microsoft"
+    ],
     "main": "./out/extension.js",
     "contributes": {
         "commands": [
             {
-                "command": "z-tf-util.checkout",
-                "title": "Z-TF Util: Checkout current file"
+                "command": "auto-tfs.checkout",
+                "title": "Auto TFS: Checkout current file"
             },
             {
-                "command": "z-tf-util.undo",
-                "title": "Z-TF Util: Undo changes for current file"
+                "command": "auto-tfs.undo",
+                "title": "Auto TFS: Undo changes for current file"
             },
             {
-                "command": "z-tf-util.add",
-                "title": "Z-TF Util: Add current file to TFS"
+                "command": "auto-tfs.add",
+                "title": "Auto TFS: Add current file to TFS"
             },
             {
-                "command": "z-tf-util.delete",
-                "title": "Z-TF Util: Delete current file"
+                "command": "auto-tfs.delete",
+                "title": "Auto TFS: Delete current file"
             }
         ],
         "configuration": {
-            "title": "Z-TF Utils",
+            "title": "Auto TFS",
             "properties": {
-                "z-tf-util.tf.path": {
+                "auto-tfs.tf.path": {
                     "type": "string",
                     "description": "Full path to TF.EXE or TF.CMD"
                 },
-                "z-tf-util.debug": {
+                "auto-tfs.tf.confirm": {
+                    "type": "boolean",
+                    "description": "Show confirmation message on any TFS operation (i.e. checkout, add, delete, undo, etc.)"
+                },
+                "auto-tfs.tf.autoCheckout": {
+                    "type": "string",
+                    "default": "Never",
+                    "enum": ["Never", "On Save", "On Change"],
+                    "enumDescriptions": [
+                        "Don't checkout file(s)",
+                        "Checkout file(s) on save",
+                        "Checkout file(s) on change"
+                    ],
+                    "description": "Specifies when should file(s) checked out"
+                },
+                "auto-tfs.tf.autoAdd": {
+                    "type": "boolean",
+                    "description": "Add file to source control on adding file(s)"
+                },
+                "auto-tfs.tf.autoDelete": {
+                    "type": "boolean",
+                    "description": "Delete file from source control on deleting file(s)"
+                },
+                "auto-tfs.tf.autoRename": {
+                    "type": "boolean",
+                    "description": "Rename file on source control on renaming file(s)"
+                },
+                "auto-tfs.debug": {
                     "type": "boolean",
                     "description": "Run the extension in debug mode. Commands output will be printed, if the setting is set to true"
                 }
@@ -63,12 +105,10 @@
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
-        "@types/node": "^8.10.25",
-        "tslint": "^5.11.0",
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.22"
+        "@types/node": "^16.4.8",
+        "tslint": "^6.1.3",
+        "typescript": "^4.3.5",
+        "vscode": "^1.1.37"
     },
-    "dependencies": {
-        "package-lock.json": "^1.0.0"
-    }
+    "dependencies": {}
 }
