--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,12 @@
 		"outDir": "out",
 		"lib": ["es6"],
 		"sourceMap": true,
-		"rootDir": "src"
+		"rootDir": "src",
+		"strict": true,
+		/* Additional Checks */
+		"noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
+		"noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
+		"noUnusedParameters": true /* Report errors on unused parameters. */
 	},
 	"exclude": ["node_modules", ".vscode-test"]
 }
