--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [15.0.1]
     
     steps:
     - uses: actions/checkout@v2
