--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
 	"compilerOptions": {
+		"declaration": false,
+		"downlevelIteration": false,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"importHelpers": true,
 		"module": "commonjs",
 		"target": "es6",
 		"outDir": "out",
@@ -12,5 +17,8 @@
 		"noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
 		"noUnusedParameters": true /* Report errors on unused parameters. */
 	},
+	"include": [
+		"src/**/*"
+	  ],
 	"exclude": ["node_modules", ".vscode-test"]
 }
